# gomc_rest_python

./: README.md  README_JP.md  RELEASING.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
checksums/: v1.4.0.sha256  v1.5.0.sha256  v1.6.0.sha256
scripts/: vendor_binaries.py
src/gomc_rest/: __init__.py  _binaries.py  _server.py
src/gomc_rest/binaries/: .gitignore  README.md
tests/: test_connect.py  test_smoke.py
