[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gomc-rest"
version = "0.1.0"
description = "Pattern-B wrapper for gomc-rest: bundles the gomc-rest server binary and auto-launches it, exposing a Python client for Mitsubishi PLCs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Moge800" }]
keywords = ["mitsubishi", "plc", "mc-protocol", "slmp", "gomc-rest"]

# HTTP layer is delegated to gomc-rest-client (pattern A). We only add the
# bundled-binary + subprocess lifecycle on top.
dependencies = [
    "gomc-rest-client>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/Moge800/gomc_rest_python"
"Upstream server" = "https://github.com/Moge800/gomc-rest"
"HTTP client" = "https://github.com/Moge800/gomc_rest_client"

[tool.hatch.build.targets.wheel]
packages = ["src/gomc_rest"]

# The platform-specific server binaries live under gomc_rest/binaries/ and are
# shipped as package data. (Per-platform wheels are produced at release time;
# see binaries/README.md.)
[tool.hatch.build.targets.wheel.force-include]
"src/gomc_rest/binaries" = "gomc_rest/binaries"
