[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gomc-rest"
version = "0.1.2"
description = "Talk to Mitsubishi PLCs from Python over the MC protocol via a bundled, auto-launched gomc-rest server — with optional REST API exposure."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Moge800" }]
keywords = ["mitsubishi", "plc", "mc-protocol", "slmp", "gomc-rest"]

# HTTP layer is delegated to gomc-rest-client (pattern A). We only add the
# bundled-binary + subprocess lifecycle on top.
dependencies = [
    # Cap the client to a range known to accept the bundled server version
    # (GOMC_REST_VERSION). A future client that raises its minimum server
    # version must not be pulled in without bumping the bundled binary too.
    "gomc-rest-client>=0.10.0,<0.11",
]

[project.urls]
Homepage = "https://github.com/Moge800/gomc_rest_python"
"Upstream server" = "https://github.com/Moge800/gomc-rest"
"HTTP client" = "https://github.com/Moge800/gomc_rest_client"

[tool.hatch.build.targets.wheel]
packages = ["src/gomc_rest"]
# The platform-specific server binaries under gomc_rest/binaries/ are vendored
# at build time and are gitignored; list them as artifacts so the wheel ships
# whichever binary is present, without duplicating the tracked files (README,
# .gitignore) in that directory. (Per-platform wheels are produced at release
# time; see binaries/README.md.)
artifacts = ["src/gomc_rest/binaries/gomc-rest*"]
